--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     --border-radius-small: 8px;
 
     --height-header: 110px;
+    --height-header-open: 500px;
     
     --width-mobile: 100%;
 }
@@ -77,7 +78,7 @@ a {
 
 .container {
     width: 100%;
-    padding: 30px;
+    padding: 20px;
     background-color: var(--color-white);
     border-radius: 20px;
     box-shadow: rgba(100, 100, 111, 0.1) 0px 7px 29px 0px;
@@ -89,27 +90,46 @@ a {
 
 header {
     width: 100%;
-    padding: var(--padding) var(--padding-large);
     height: var(--height-header);
-    z-index: 10;
-    position: fixed;   
+    padding: var(--padding) var(--padding-large);
     background-color: var(--color-white);
     border-radius: 0px 0px 15px 15px;
     box-shadow: rgba(100, 100, 111, 0.1) 0px 7px 29px 0px;
+    z-index: 10;
+    position: fixed;
+    transition: max-height 2000ms;
 }
 
+
 header nav {
-    height: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+}
+
+header nav ul {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: var(--padding-large);
+    list-style: none;
 }
+
+
+
+
+
+
 
 #hamburger {
     width: 40px;
     height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
     cursor: pointer;
-    position: relative;
 }
 
 #hamburger > div {
@@ -120,8 +140,6 @@ header nav {
     position: absolute;
     transition: all 200ms;
 }
-
-
 
 #first-bar {
     top: 0;
@@ -134,26 +152,18 @@ header nav {
     bottom: 0;
 }
 
-#hamburger:hover #first-bar {
+#hamburger.active #first-bar {
     top: 50%;
     transform: translateY(-50%) rotateZ(45deg);
 }
-#hamburger:hover #second-bar {
+#hamburger.active #second-bar {
     background-color: transparent;
 }
-#hamburger:hover #third-bar {
+#hamburger.active #third-bar {
     bottom: 50%;
     transform: translateY(50%) rotateZ(-45deg) ;
 }
 
-header nav ul {
-    min-width: max-content;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: var(--padding-large);
-    list-style: none;
-}
 
 #logo-alexandre {
     font-size: 1.5rem;
@@ -177,7 +187,7 @@ header nav ul {
     transition: background-color 200ms, color 200ms;
 }
 .cta-important:hover {
-    background-color: var(--color-white);
+    background-color: transparent;
     color: var(--color-pink);
 }
 
@@ -189,10 +199,25 @@ header nav ul {
     flex-direction: column;
     align-items: center;
     gap: var(--padding-large);
+    position: relative;
 }
-
 .content-wrapper > *:first-child {
     margin-top: var(--padding-large);
+}
+
+#blur {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(1px);
+    background-color: rgba(125, 125, 125, .25);
+    display: none;
+}
+
+#blur.active {
+    display: block;
 }
 
 
@@ -336,30 +361,62 @@ header nav ul {
 
 
 @media (max-width: 840px) {
+    :root {
+        --padding: 20px;
+        --padding-large: 40px;
+        --padding-footer: 75px;
+    }
     p {
         text-align: left;
     }
     header {
+
         justify-content: center;
     }
     header nav {
+        
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
     }
+    #logo-alexandre {
+        text-align: center;
+    }
     header nav ul {
-        position: absolute;
-        right: var(--padding);
+        display: none;
+        flex-direction: column;
     }
     header nav ul li {
-        display: none;
+        text-align: center;
     }
-    header nav ul li.allow-mobile-view {
+    #hamburger {
         display: block;
     }
-    header nav ul li:last-child a {
-        background-color: transparent;
-        border: none;
-        color: var(--color-pink);
+
+    header.open {
+        height: fit-content;
     }
+    header.open nav {
+        justify-content: flex-start;
+        gap: var(--padding-large);
+    }
+
+    header.open nav ul {
+        display: flex;
+        gap: var(--padding);
+    }
+
+    header.open nav ul li {
+        display: flex;
+        align-items: center;
+    }
+
+
+
+
+
+
+
     .projet-element {
         width: var(--width-mobile);
     }
