Add projects + fix contact

--- a/style.css
+++ b/style.css
@@ -17,15 +17,18 @@
     --color-white: #FFFFFF;
     --color-background-light-grey: #f6f5f0;
 
+    --padding-small: 10px;
     --padding: 20px;
     --padding-large: 40px;
     --padding-footer: 75px;
 
     --border-radius-small: 8px;
 
+    --max-width-header: 1500px;
     --height-header: 110px;
     --height-header-open: 500px;
     
+    --max-width: 1200px;
     --width-mobile: 100%;
 }
 
@@ -64,7 +67,7 @@ p {
     text-align: justify;
 }
 
-a {
+a, a > p{
     font-size: 1.1rem;
     font-weight: 600;
     color: var(--color-pink);
@@ -78,6 +81,7 @@ a {
 
 .container {
     width: 100%;
+    max-width: var(--max-width);
     padding: 20px;
     background-color: var(--color-white);
     border-radius: 20px;
@@ -97,10 +101,13 @@ header {
     z-index: 10;
     position: fixed;
     transition: max-height 2000ms;
+    
 }
 
 header nav {
+    max-width: var(--max-width-header);
     min-height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -172,15 +179,16 @@ header nav ul {
 
 .cta-important {
     padding: 10px 15px;
-    background-color: var(--color-pink);
+    background-color: transparent;
     border: 2px solid var(--color-pink);
     border-radius: 20px;
-    color: var(--color-white);
+    color: var(--color-pink);
     transition: background-color 200ms, color 200ms;
 }
 .cta-important:hover {
     background-color: transparent;
-    color: var(--color-pink);
+    background-color: var(--color-pink);
+    color: var(--color-white);
 }
 
 .content-wrapper {
@@ -319,20 +327,18 @@ header nav ul {
 }
 
 
-
 .social-media-wrapper {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    text-align: center;
-    
+    gap: var(--padding);
 }
 
 .card_Réseaux_sociaux {
-    width: 100%;
-    max-height: 80%;
-    margin: 0px 20px;
+    min-width: 120px;
     padding: 25px 20px;
+    text-align: center;
 }
 
 .card_Réseaux_sociaux img {
@@ -343,6 +349,11 @@ header nav ul {
 
 .card_Réseaux_sociaux:hover img {
     transform: translateY(-10px);
+}
+
+.card_Réseaux_sociaux a p {
+    padding-top: var(--padding-small);
+    text-align: center;
 }
 
 
@@ -361,7 +372,6 @@ header nav ul {
         justify-content: center;
     }
     header nav {
-        
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -399,12 +409,6 @@ header nav ul {
         display: flex;
         align-items: center;
     }
-
-
-
-
-
-
 
     .projet-element {
         width: var(--width-mobile);
